# BIMrender

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat
.pi/: APPEND_SYSTEM.md  memory.md
Docs/: Local-A1111-Setup.md  NanoBanana-Upload-Processing.md  ideas.md  my-ideas.md
RFIX/: BIMrenderFix.grc  nanoBanana.html
RFIX.mac/: Info.plist
RFIX.win/: AddOnMain.rc2
RINT/: BIMrender.grc  dlgNanoBanana.grc  dlgNanoBananaSettings.grc  palNanoBanana.grc
Releases/: BIMrender.apx  BIMrender27.apx  BIMrender28.apx
Releases/BIMrender.bundle/Contents/: Info.plist
Releases/BIMrender.bundle/Contents/MacOS/: BIMrender
Releases/BIMrender.bundle/Contents/Resources/English.lproj/: DATA_32610.rsrd  DLGH_32600.rsrd  DLGH_32601.rsrd  DLGH_32602.rsrd  GSDG_32600.rsrd  GSDG_32601.rsrd  GSDG_32602.rsrd  Localizable.strings  MDID_32500.rsrd
Releases/BIMrender.bundle/Contents/_CodeSignature/: CodeResources
Src/: BIMrender.c  ResourceIds.hpp
Src/Common/: NanoBananaPanel.cpp  NanoBananaPanel.hpp
Src/Dialogs/: dlgNanoBanana.cpp  dlgNanoBanana.hpp  dlgNanoBananaSettings.cpp  dlgNanoBananaSettings.hpp
Src/NanoBanana/: Base64.cpp  Base64.hpp  Capture3D.cpp  Capture3D.hpp  FluxClient.cpp  FluxClient.hpp  GeminiClient.cpp  GeminiClient.hpp  JsonUtils.cpp  JsonUtils.hpp  Settings.cpp  Settings.hpp  WebUIClient.cpp  WebUIClient.hpp
Src/Palettes/: palNanoBanana.cpp  palNanoBanana.hpp
